# cmess

./: CMakeLists.txt  CODE  CONTRIBUTORS.md  COVERAGE.md  CTestConfig.cmake  DEPENDENCIES  Doxyfile.in  INSTALL.md  ISSUES.md  README.md  cmake_uninstall.cmake.in  cmakelint.rc  cmess_valgrind.supp  config.h.in  mess-config-version.cmake.in  mess-config.cmake.in  suppress_cppcheck.txt
lib/: CMakeLists.txt
lib/contrib/: CMakeLists.txt
lib/direct/: CMakeLists.txt  backslash.c  care.c  cholfactor.c  dgeqp3.c  lu_reuse.f90  pinv.c  splsolve.c  trisolve.c
lib/dynsys/: CMakeLists.txt  dynsysinit.c  project.c  stable.c  transfer.c
lib/easyfrontend/: CMakeLists.txt  care.c  lyap.c
lib/eigen/: CMakeLists.txt  arnoldi.c  arnoldi_template.c  arpack.c  eig.c  eig_hessenberg.c  lanczos_template_nrm.c  schur.c  schur_to_evd.c  sign.c  svd.c
lib/extblas/: CMakeLists.txt  dgeadd.f  dgefdf.f  dgefnr.f  dgetrp.f  dlasy2.f  dzdotu.f  dzgbtrs.f  dzgeadd.f  dzgemm.f  dzgemv.f  dzger.f  dzgetrs.f  dzpotrs.f  dztbsv.f  dztrsm.f  zddotc.f  zddotu.f  zdgemm.f  zgeadd.f  zgefdf.f  zgefnr.f
lib/formats/: CMakeLists.txt  cholmod.c  mvpcall.c
lib/graph/: blockpart.c  dfs.c
lib/io/: matrix_print.c  print.c  read.c  spy.c  vector_print.c  vector_read.c  write.c
lib/itsolver/: bicgstab.c  cg.c  gmres.c  jacobi.c  sor.c  status.c
lib/lrcf_adi/: CMakeLists.txt  col_compress.c  dense_nm.c  equation.c  equation_apply.c  equation_glyap.c  equation_glyap_dae1.c  equation_glyap_dae2.c  equation_glyap_so1.c  equation_glyap_so2.c  equation_lyap.c  equation_stable.c  galerkin.c  lradi.c  lrnm.c  lrnm_linesearch.c  options.c  para.c  status.c  wachspress.c
lib/matrix/: CMakeLists.txt  add.c  addcol.c  alloc.c  any.c  bandwidth.c  biorth.c  cat.c  cimport.c  colops.c  colrowsums.c  condest.c  convert.c  decomp.c  diag.c  dupl.c  dynorm.c  equal.c  eye.c  fdm_matrix.c  fill.c  gaxpy.c  gemm_dense_sparse_hh.f90  gemm_dense_sparse_hn.f90  gemm_dense_sparse_ht.f90  gemm_dense_sparse_nh.f90  gemm_dense_sparse_nn.f90  gemm_dense_sparse_nt.f90  gemm_dense_sparse_pp.f90  gemm_dense_sparse_th.f90  gemm_dense_sparse_tn.f90  gemm_dense_sparse_tt.f90  gemm_dense_sparse_v2.f90  gemm_sparse_dense_hh.f90  gemm_sparse_dense_hn.f90  gemm_sparse_dense_ht.f90  gemm_sparse_dense_nh.f90  gemm_sparse_dense_nn.f90  gemm_sparse_dense_nt.f90  gemm_sparse_dense_pp.f90  (+33 more)
lib/misc/: CMakeLists.txt  eps.c  error.c  freelist.c  gettypes.c  init.c  malloc.c  misc.c  offsets.c  openmp.c  threadpool.c  time.c  xerbla.c
lib/plot/: CMakeLists.txt  plot_scriptExporter.c  x11init.c
lib/precond/: diag.c  ilu0.c  iluk.c  precond.c  sor.c
lib/reorder/: amd.c  cuthill.c  select.c
lib/vector/: alloc.c  any.c  axpy.c  cat.c  convert.c  copy.c  filter.c  getset.c  init.c  kron.c  linspace.c  map.c  memsize.c  minmax.c  norm.c  ones.c  perm.c  rand.c  real_complex.c  scale.c
libcscutils/: CMakeLists.txt  Doxyfile.in  README.md  configoptions.md
libcscutils/CMakeModules/: CCompilerSettings.cmake  CMakeHelpers.cmake  CXXCompilerSettings.cmake  CheckFortranSourceCompiles.cmake  FindAMD.cmake  FindCXSPARSE.cmake  FindGfortran.cmake  FindOpenMP.cmake  FindRRQR.cmake  FindSUPERLU.cmake  FortranCompilerSettings.cmake  superlu_refinement_bug.c
libcscutils/examples/: CMakeLists.txt  demo_background_worker.c  demo_hardware.c  demo_hashtable.c  demo_hdf.c  demo_inifile.c  demo_slist.c  demo_table.c  demo_table_fortran.f90
libcscutils/src/: CMakeLists.txt  doc_main.c
matlab/: CMakeLists.txt  mess_lint.m  mess_path.m
matlab/c_interface/: CMakeLists.txt  callback_equation.c  interface_matlab.c  interface_matlab.h
matlab/mexmess/: CMakeLists.txt  Contents.m  mess_call.c  mess_call.m
octave/: CMakeLists.txt
octave/cpp_interface/: CMakeLists.txt
octave/octmess/: CMakeLists.txt  mess_path.m  mess_tests.m
python/: CMakeLists.txt  Makefile  coverage.rc.in  pylint.rc  setup.py.in  valgrind-python.supp  yapf.rc
python/c_interface/: equations.c  pymess.c  pymess.h  reimplemented.c  test.c
python/doc/: conf.py.in  global.rst  index.rst  install.rst  unittest.rst
python/example/: pymess_callback.py  pymess_care.py  pymess_glyap.py  pymess_gmpare.py  pymess_gstein.py  pymess_lradi.py  pymess_lradi_dae1.py  pymess_lradi_dae2.py  pymess_lradi_so1.py  pymess_lradi_so2.py  pymess_lrnm.py  pymess_lrnm_dae1.py  pymess_lrnm_dae2.py  pymess_lrnm_so1.py  pymess_lrnm_so2.py  pymess_lyap.py  pymess_sylvester_sparsedense.py  run.sh.in
python/pymess/: __init__.py  dense_nm_gmpare.py  direct_select.py  easy.py  enum.py  equation.py  glyap3.py  lradi.py  lrnm.py  misc.py  options.py  residual.py  status.py
python/unittests/: run.py
tests/: CMakeLists.txt  call_macro.h
tests/data/: SPD_SYM_625.mtx  ber_A.mtx  ber_B.mtx  ber_E.mtx  ord5x5.mtx  rand10x10_1.mtx  rand10x10_2.mtx  rand10x1668_1.mtx  rand1357x10.mtx  rand1668x10.mtx  rand50x50.mtx  rand625x10_1.mtx  rand_spd.mtx  randc20x20.mtx  randc50x50.mtx
tests/direct/: CMakeLists.txt  check_backslash.c  check_det.c  check_dgeqp3.c  check_direct_care.c  check_getLU.c  check_hessenberg.c  check_lapackqr.c  check_pinv.c  check_trisolve.c  glyap_test.c  gstein_test.c  inverse.c  linsolve.c  linsolve_multi.c  linsolvem.c  linsolvem_multi.c  sylvester_dense.c  sylvester_sparsedense.c
tests/eigen/: CMakeLists.txt  check_arnoldi_template.c  check_arnoldi_template_nrm.c  check_arpack.c  check_arpack_lanczos.c  check_eig.c  check_eig2.c  check_eig_complex.c  check_eig_hessenberg_schur.c  check_eig_hessenberg_schur_largest_ev.c  check_gsign.c  check_schur.c  check_sign.c  check_svd.c  check_svd_complex.c  check_svd_econ.c  check_svd_econ_complex.c
tests/formats/: CMakeLists.txt  check_cholmod.c  check_cimport.c  check_cimport_c2d.c  check_convert.c  check_mvpcall_matrix.c  check_perm.c  check_real_imag_part.c
tests/io/: CMakeLists.txt  check_fputs_block.c  check_matrixio.c  check_vectorio.c
tests/itsolver/: CMakeLists.txt  check_itsolver.c  check_precond.c
tests/lrcf_adi/: CMakeLists.txt  check_ber_sign_fac.c  check_dae2_handles_adi.c  check_dense_nm.c  (+16 more)
tutorials/: CMakeLists.txt  tutorials.dox
(+657 files in other folders)
